syntax = "proto2";

import "typ.proto";

package pb;

service DaemonService {
  rpc Stop (StopRequest) returns (StopResponse);
  rpc ViewConfig(ViewConfigRequest) returns (ViewConfigResponse);
}



