
syntax = "proto2";

import "typ.proto";

// Code generated by tonic. DO NOT EDIT.
package pb;

option go_package = "networkpb";

message NetworkHeartbeatCheckRequest {
  required string service = 1;
}

message NetworkHeartbeatCheckResponse {
  required ServingStatus status = 1;
  required string addr = 2;
}

service NetworkService {
  rpc ViewConfig(ViewConfigRequest) returns (ViewConfigResponse);

  rpc CheckHeartbeat(NetworkHeartbeatCheckRequest) returns (NetworkHeartbeatCheckResponse);
  rpc WatchHeartbeat(stream NetworkHeartbeatCheckRequest) returns (stream NetworkHeartbeatCheckResponse);
}